# R300

./: .gitignore  README.md  README_APPLY.txt  README_old.md  build_log.txt  frames.gv
roadnet_tool/: README.md  RoadNet-Studio.desktop  RoadNet-Studio.desktop.example  main.py  main_gui.py  requirements.txt  run_roadnet_studio.sh  scan_result.txt
roadnet_tool/config/: default.yaml  samroad_config.yaml  samroad_single_config.yaml  samroadplus_config.yaml
roadnet_tool/gui/: __init__.py  canvas_view.py  graph_issue_dialog.py  graph_line_optimize_dialog.py  history_manager.py  large_tile_edit_dialog.py  layer_manager.py  main_window.py  mask_postprocess_dialog.py  parameter_panel.py  project_manager.py  samroad_run_dialog.py  samroad_single_run_dialog.py  skeleton_gen_dialog.py  skeleton_optimize_dialog.py  skeleton_to_graph_dialog.py  status_bar.py  styles.qss  task_point_dialog.py  tool_panel.py
roadnet_tool/roadnet/: __init__.py  adaptive_waypoint_resampler.py  color_segment.py  competition_fast_roadnet.py  competition_fast_roadnet_worker.py  draft_graph_extract.py  formal_extraction_config.py  formal_extraction_worker.py  gcp_io.py  geo_calibration.py  global_planner.py  graph_auto_repair.py  graph_build.py  graph_diagnostics.py  graph_editor.py  graph_editor_qt.py  graph_issue_highlight.py  graph_line_optimizer.py  graph_utils.py  ignore.py  io_utils.py  judge_final_graph_view.py  large_image_project.py  large_image_worker.py  large_mask_cleaner.py  large_skeleton_optimizer.py  large_skeleton_preprocess.py  local_graph_repair.py  lowres_formal_mask.py  lowres_formal_mask_worker.py  main_road_postprocess.py  main_road_seed.py  mask_editor.py  mask_hole_filler.py  mask_postprocess.py  mask_quality_filter.py  opencv_road_segmenter.py  optimized_skeleton.py  path_export.py  path_layer_diagnostics.py  (+34 more)
roadnet_tool/samroad_bridge/: __init__.py  run_samroad_bridge.py  run_samroadplus_bridge.py
roadnet_tool/tests/: region_edit_qt_smoke.py  test_adaptive_waypoint_resampler.py  test_auto_assist.py  test_calibration_fix.py  test_competition_fast_roadnet.py  test_corner_calibration_txt.py  test_formal_extraction_worker.py  test_graph_build.py  test_graph_issue_highlight.py  test_graph_numpy_fix.py  test_path_export.py  (+34 more)
scripts/: start_r300.sh  start_single_lidar_elevation.sh
src/R300/r300_1x_navigation/: CMakeLists.txt  package.xml  vision_snapshot_layer_plugins.xml  修改说明.md
src/R300/r300_1x_navigation/config/: subject1_costmap_common.yaml  subject1_dwa.yaml  subject1_dwa.yaml.bak  subject1_dwa_vision.yaml  subject1_global_costmap.yaml  subject1_local_costmap.yaml  subject1_local_costmap_vision.yaml  subject1_move_base.yaml  subject1_nav_params.yaml  subject1_vision_obstacles.yaml  subject1_waypoints.yaml
src/R300/r300_1x_navigation/include/r300_1x_navigation/: geodesy.hpp  vision_snapshot_layer.hpp
src/R300/r300_1x_navigation/launch/: one_x_localization_only.launch  subject1_dwa_sim.launch  subject1_dwa_web_sim.launch  subject1_minimal.launch  subject1_move_base.launch  subject1_vision_avoidance.launch  subject1_waypoint_nav.launch  subject1_waypoint_nav.launch.backup_before_map_odom_tf  subject1_waypoint_nav.launch.backup_before_mid360  subject1_waypoint_nav.launch.bak_before_ultrasonic  subject1_waypoint_nav.launch.bak_junk_after_document  subject1_waypoint_vision_nav.launch  ultrasonic_basic.launch  ultrasonic_filter.launch
src/R300/r300_1x_navigation/maps/: subject1_blank_map.yaml
src/R300/r300_1x_navigation/msg/: Attitude.msg  InsImu.msg  InsStatus.msg  UpdateFlag.msg  Velocity.msg
src/R300/r300_1x_navigation/scripts/: costmap_terminal_viewer.py  costmap_web_viewer.py  diagnose_vision_costmap.py  dwa_odom_adapter.py  dwa_web_tuner.py  ins_trajectory_viewer.py  live_dynamic_reconfigure_web.py  live_dynamic_reconfigure_web.py.backup_20260721_115201  odom_to_path.py  send_1x_command.py  sim_blank_map_node.py  sim_r300_odom_node.py  ultrasonic_basic_node.py  ultrasonic_estop_node.py  ultrasonic_filter_node.py  vision_clear_scan_node.py  vision_costmap_scan_node.py  vision_obstacle_layer_node.py  waypoint_executor.py
src/R300/r300_1x_navigation/scripts/one_key/: check_r300_nav.sh  fix_permissions.sh  record_r300_bag.sh  send_goal_base.sh  start_1x.sh  start_dwa_web_tuner.sh  start_live_dynamic_tuner.sh  start_localization_only.sh  start_r300_vision_nav.sh  start_real_nav.sh  start_sim_dwa.sh  stop_1x.sh  stop_r300_nav.sh  subject1_blank_map.yaml  subject1_blank_map_backup_20260720_155225.yaml  一键启动说明.md
src/R300/r300_1x_navigation/src/: cmd_vel_guard.cpp  geodetic_goal_sender.cpp  one_x_serial_driver.cpp  vision_snapshot_layer.cpp
src/R300/r300_1x_navigation/常用指令KL/: R300控制参数仿真.md  关于1XCPP.md  实时位置显示.md  室外航点规划.md  惯导对准.md  通用指令.md
src/R300/r300_web_dashboard/: CMakeLists.txt  README_CN.md  README_V15_INS_ONLY_WEB.txt  package.xml
src/R300/r300_web_dashboard/config/: topics.yaml
src/R300/r300_web_dashboard/launch/: r300_web_dashboard.launch
src/R300/r300_web_dashboard/scripts/: apply_web_ui_patch.sh  dashboard_server.py  web_reset_ins.sh  web_start_camera.sh  web_start_nav.sh
src/R300/r300_web_dashboard/www/: app.js  app.js.bak_v11_20260720_221924  config.json  config.json.bak_v11_20260720_221924  index.html  index.html.bak_v11_20260720_221924  style.css
src/R300_vision/r300_yolo_detector/: CMakeLists.txt  package.xml
src/R300_vision/r300_yolo_detector/config/: detector.yaml
src/R300_vision/r300_yolo_detector/launch/: r300_system.launch  yolo_depth.launch
src/R300_vision/r300_yolo_detector/models/: c11_260711.pt  model0722.pt  model_c6_260723.pt
src/R300_vision/r300_yolo_detector/scripts/: yolo_depth_node.py
src/single_lidar_elevation/bringup/: CMakeLists.txt  README.md  package.xml
src/single_lidar_elevation/bringup/config/: MID360_single.json  crop_front.yaml  elevation_core.yaml  elevation_single.yaml  fastlio_mid360.yaml  single_lidar_elevation.rviz
src/single_lidar_elevation/bringup/launch/: single_lidar_elevation.launch
src/single_lidar_elevation/bringup/scripts/: custom_msg_crop.py  livox_imu_transform.py  livox_odom_transform.py
(+160 files in other folders)
