<?xml version="1.0"?>
<package format="2">
  <name>r300_1x_navigation</name>
  <version>0.1.0</version>
  <description>Subject-1 minimal R300 navigation using the 1X INS serial solution as the only pose source.</description>

  <maintainer email="kl@example.invalid">R300 Challenge Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>r300_simulation</exec_depend>
  <exec_depend>r300_function</exec_depend>
  <exec_depend>scout_base</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export/>
</package>
