<?xml version="1.0"?>
<package format="2">
  <name>r300_yolo_detector</name>
  <version>0.0.1</version>

  <description>
    YOLO26 GPU detection and D435i depth localization for R300.
  </description>

  <maintainer email="explorer@example.com">
    explorer
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>r300_vision_msgs</depend>
</package>